--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cookie-parser": "^1.4.7",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
+    "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-error": "^0.0.6",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
-    "nodemon": "^3.1.11"
+    "node-cron": "^4.2.1",
+    "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6"
   }
 }
