--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.1",
     "http-error": "^0.0.6",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
