--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^9.1.1",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6"
   }
 }
